--- a/imagenes legend 2012.html
+++ b/imagenes legend 2012.html
@@ -40,7 +40,7 @@
         <li><a href="imagenes.htm" class="active">Imágenes</a></li>
         <li><a href="letras.htm">Audios</a></li>
         <li><a href="videos.htm">Vídeos</a></li>
-        <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
+        <li><a href="https://facebook.com/1aKomunion">Facebook</a></li>
       </ul>
     </nav>
     <!-- Galería de imágenes -->
@@ -49,44 +49,44 @@
       <p><a href="imagenes.htm" class="volver">← Volver atrás</a></p>
       <section class="galeria-grupo">
         <h2>Pub D'Legend (2012)</h2>
-        <a href="imagenes/legend%202012/00.jpg" target="_blank"> <img src="imagenes/legend%202012/00.jpg"
+        <a href="imagenes/legend%202012/00.jpg"> <img src="imagenes/legend%202012/00.jpg"
 
-            alt="foto1"> </a> <a href="imagenes/legend%202012/01.JPG" target="_blank">
+            alt="foto1"> </a> <a href="imagenes/legend%202012/01.JPG">
           <img src="imagenes/legend%202012/01.JPG" alt="foto2"> </a> <a href="imagenes/legend%202012/02.JPG"
 
-          target="_blank"> <img src="imagenes/legend%202012/02.JPG" alt="foto1">
-        </a> <a href="imagenes/legend%202012/03.JPG" target="_blank"> <img src="imagenes/legend%202012/03.JPG"
+         > <img src="imagenes/legend%202012/02.JPG" alt="foto1">
+        </a> <a href="imagenes/legend%202012/03.JPG"> <img src="imagenes/legend%202012/03.JPG"
 
             alt="foto2"> </a>
-        <a href="imagenes/legend%202012/04.JPG" target="_blank"> <img src="imagenes/legend%202012/04.JPG"
+        <a href="imagenes/legend%202012/04.JPG"> <img src="imagenes/legend%202012/04.JPG"
 
-            alt="foto1"> </a> <a href="imagenes/legend%202012/05.JPG" target="_blank">
+            alt="foto1"> </a> <a href="imagenes/legend%202012/05.JPG">
           <img src="imagenes/legend%202012/05.JPG" alt="foto2"> </a>
-        <a href="imagenes/legend%202012/06.JPG" target="_blank"> <img src="imagenes/legend%202012/06.JPG"
+        <a href="imagenes/legend%202012/06.JPG"> <img src="imagenes/legend%202012/06.JPG"
 
-            alt="foto1"> </a> <a href="imagenes/legend%202012/07.JPG" target="_blank">
+            alt="foto1"> </a> <a href="imagenes/legend%202012/07.JPG">
           <img src="imagenes/legend%202012/07.JPG" alt="foto2"> </a>
-        <a href="imagenes/legend%202012/08.JPG" target="_blank"> <img src="imagenes/legend%202012/08.JPG"
+        <a href="imagenes/legend%202012/08.JPG"> <img src="imagenes/legend%202012/08.JPG"
 
-            alt="foto1"> </a> <a href="imagenes/legend%202012/09.JPG" target="_blank">
+            alt="foto1"> </a> <a href="imagenes/legend%202012/09.JPG">
           <img src="imagenes/legend%202012/09.JPG" alt="foto2"> </a>
-        <a href="imagenes/legend%202012/10.JPG" target="_blank"> <img src="imagenes/legend%202012/10.JPG"
+        <a href="imagenes/legend%202012/10.JPG"> <img src="imagenes/legend%202012/10.JPG"
 
-            alt="foto1"> </a> <a href="imagenes/legend%202012/11.JPG" target="_blank">
+            alt="foto1"> </a> <a href="imagenes/legend%202012/11.JPG">
           <img src="imagenes/legend%202012/11.JPG" alt="foto2"> </a>
-        <a href="imagenes/legend%202012/12.JPG" target="_blank"> <img src="imagenes/legend%202012/12.JPG"
+        <a href="imagenes/legend%202012/12.JPG"> <img src="imagenes/legend%202012/12.JPG"
 
-            alt="foto1"> </a> <a href="imagenes/legend%202012/13.JPG" target="_blank">
+            alt="foto1"> </a> <a href="imagenes/legend%202012/13.JPG">
           <img src="imagenes/legend%202012/13.JPG" alt="foto2"> </a>
-        <a href="imagenes/legend%202012/14.JPG" target="_blank"> <img src="imagenes/legend%202012/14.JPG"
+        <a href="imagenes/legend%202012/14.JPG"> <img src="imagenes/legend%202012/14.JPG"
 
-            alt="foto1"> </a> <a href="imagenes/legend%202012/15.jpg" target="_blank">
+            alt="foto1"> </a> <a href="imagenes/legend%202012/15.jpg">
           <img src="imagenes/legend%202012/15.jpg" alt="foto2"> </a>
-        <a href="imagenes/legend%202012/16.JPG" target="_blank"> <img src="imagenes/legend%202012/16.JPG">
+        <a href="imagenes/legend%202012/16.JPG"> <img src="imagenes/legend%202012/16.JPG">
           
         </a> </section>
       <!-- Volver abajo -->
       <p><a href="imagenes.htm" class="volver">← Volver atrás</a></p>
     </main>
-  </body>
+  <script src="js/lightbox.js"></script></body>
 </html>
