--- a/imagenes magdalena fest.html
+++ b/imagenes magdalena fest.html
@@ -39,7 +39,7 @@
         <li><a href="imagenes.htm" class="active">Imágenes</a></li>
         <li><a href="letras.htm">Audios</a></li>
         <li><a href="videos.htm">Vídeos</a></li>
-        <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
+        <li><a href="https://facebook.com/1aKomunion">Facebook</a></li>
       </ul>
     </nav>
     <!-- Galería de imágenes -->
@@ -48,14 +48,14 @@
       <p><a href="imagenes.htm" class="volver">← Volver atrás</a></p>
       <section class="galeria-grupo">
         <h2>Magdalena Fest (2014)</h2>
-        <a href="imagenes/magdalena%20fest%202014/00.jpg" target="_blank"> <img
+        <a href="imagenes/magdalena%20fest%202014/00.jpg"> <img
             src="imagenes/magdalena%20fest%202014/00.jpg" alt="foto1"> </a> <a
-          href="imagenes/magdalena%20fest%202014/01.png" target="_blank"> <img
+          href="imagenes/magdalena%20fest%202014/01.png"> <img
             src="imagenes/magdalena%20fest%202014/01.png" alt="foto2"> </a> <a
-          href="imagenes/magdalena%20fest%202014/02.JPG" target="_blank"> <img
+          href="imagenes/magdalena%20fest%202014/02.JPG"> <img
             src="imagenes/magdalena%20fest%202014/02.JPG" alt="foto1"> </a> </section>
       <!-- Volver abajo -->
       <p><a href="imagenes.htm" class="volver">← Volver atrás</a></p>
     </main>
-  </body>
+  <script src="js/lightbox.js"></script></body>
 </html>
