--- a/imagenes terra.html
+++ b/imagenes terra.html
@@ -39,7 +39,7 @@
         <li><a href="imagenes.htm" class="active">Imágenes</a></li>
         <li><a href="letras.htm">Audios</a></li>
         <li><a href="videos.htm">Vídeos</a></li>
-        <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
+        <li><a href="https://facebook.com/1aKomunion">Facebook</a></li>
       </ul>
     </nav>
     <!-- Galería de imágenes -->
@@ -48,19 +48,19 @@
       <p><a href="imagenes.htm" class="volver">← Volver atrás</a></p>
       <section class="galeria-grupo">
         <h2>Pub Terra (2020)</h2>
-        <a href="imagenes/terra%202020/00.jpg" target="_blank"> <img src="imagenes/terra%202020/00.jpg"
-            alt="foto1"> </a> <a href="imagenes/terra%202020/01.png" target="_blank">
+        <a href="imagenes/terra%202020/00.jpg"> <img src="imagenes/terra%202020/00.jpg"
+            alt="foto1"> </a> <a href="imagenes/terra%202020/01.png">
           <img src="imagenes/terra%202020/01.png" alt="foto2"> </a> <a href="imagenes/terra%202020/02.jpg"
-          target="_blank"> <img src="imagenes/terra%202020/02.jpg" alt="foto1">
-        </a> <a href="imagenes/terra%202020/03.jpg" target="_blank"> <img src="imagenes/terra%202020/03.jpg"
+         > <img src="imagenes/terra%202020/02.jpg" alt="foto1">
+        </a> <a href="imagenes/terra%202020/03.jpg"> <img src="imagenes/terra%202020/03.jpg"
             alt="foto2"> </a>
-        <a href="imagenes/terra%202020/04.png" target="_blank"> <img src="imagenes/terra%202020/04.png"
+        <a href="imagenes/terra%202020/04.png"> <img src="imagenes/terra%202020/04.png"
             alt="foto1"> </a>
-        <a href="imagenes/terra%202020/05.png" target="_blank"> <img src="imagenes/terra%202020/05.png"
-            alt="foto1"> </a> <a href="imagenes/terra%202020/06.png" target="_blank">
+        <a href="imagenes/terra%202020/05.png"> <img src="imagenes/terra%202020/05.png"
+            alt="foto1"> </a> <a href="imagenes/terra%202020/06.png">
           <img src="imagenes/terra%202020/06.png" alt="foto2"> </a> </section>
       <!-- Volver abajo -->
       <p><a href="imagenes.htm" class="volver">← Volver atrás</a></p>
     </main>
-  </body>
+  <script src="js/lightbox.js"></script></body>
 </html>
