--- a/imagenes ultrasons 2013.html
+++ b/imagenes ultrasons 2013.html
@@ -39,7 +39,7 @@
         <li><a href="imagenes.htm" class="active">Imágenes</a></li>
         <li><a href="letras.htm">Audios</a></li>
         <li><a href="videos.htm">Vídeos</a></li>
-        <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
+        <li><a href="https://facebook.com/1aKomunion">Facebook</a></li>
       </ul>
     </nav>
     <!-- Galería de imágenes -->
@@ -48,59 +48,59 @@
       <p><a href="imagenes.htm" class="volver">← Volver atrás</a></p>
       <section class="galeria-grupo">
         <h2>4º Ultrasons (2013)</h2>
-        <a href="imagenes/ultrasons%202013/00.jpg" target="_blank"> <img src="imagenes/ultrasons%202013/00.jpg"
-            alt="foto1"> </a> <a href="imagenes/ultrasons%202013/01.JPG" target="_blank">
+        <a href="imagenes/ultrasons%202013/00.jpg"> <img src="imagenes/ultrasons%202013/00.jpg"
+            alt="foto1"> </a> <a href="imagenes/ultrasons%202013/01.JPG">
           <img src="imagenes/ultrasons%202013/01.JPG" alt="foto2"> </a> <a href="imagenes/ultrasons%202013/02.JPG"
-          target="_blank"> <img src="imagenes/ultrasons%202013/02.JPG" alt="foto1">
-        </a> <a href="imagenes/ultrasons%202013/03.JPG" target="_blank"> <img
+         > <img src="imagenes/ultrasons%202013/02.JPG" alt="foto1">
+        </a> <a href="imagenes/ultrasons%202013/03.JPG"> <img
             src="imagenes/ultrasons%202013/03.JPG" alt="foto2"> </a> <a href="imagenes/ultrasons%202013/04.jpg"
-          target="_blank"> <img src="imagenes/ultrasons%202013/04.jpg" alt="foto1">
-        </a> <a href="imagenes/ultrasons%202013/05.jpg" target="_blank"> <img
+         > <img src="imagenes/ultrasons%202013/04.jpg" alt="foto1">
+        </a> <a href="imagenes/ultrasons%202013/05.jpg"> <img
             src="imagenes/ultrasons%202013/05.jpg" alt="foto2"> </a> <a href="imagenes/ultrasons%202013/06.jpg"
-          target="_blank"> <img src="imagenes/ultrasons%202013/06.jpg" alt="foto1">
-        </a> <a href="imagenes/ultrasons%202013/07.jpg" target="_blank"> <img
+         > <img src="imagenes/ultrasons%202013/06.jpg" alt="foto1">
+        </a> <a href="imagenes/ultrasons%202013/07.jpg"> <img
             src="imagenes/ultrasons%202013/07.jpg" alt="foto2"> </a> <a href="imagenes/ultrasons%202013/10.jpg"
-          target="_blank"> <img src="imagenes/ultrasons%202013/10.jpg" alt="foto1">
-        </a> <a href="imagenes/ultrasons%202013/11.jpg" target="_blank"> <img
+         > <img src="imagenes/ultrasons%202013/10.jpg" alt="foto1">
+        </a> <a href="imagenes/ultrasons%202013/11.jpg"> <img
             src="imagenes/ultrasons%202013/11.jpg" alt="foto2"> </a> <a href="imagenes/ultrasons%202013/12.jpg"
-          target="_blank"> <img src="imagenes/ultrasons%202013/12.jpg" alt="foto1">
-        </a> <a href="imagenes/ultrasons%202013/13.jpg" target="_blank"> <img
+         > <img src="imagenes/ultrasons%202013/12.jpg" alt="foto1">
+        </a> <a href="imagenes/ultrasons%202013/13.jpg"> <img
             src="imagenes/ultrasons%202013/13.jpg" alt="foto2"> </a> <a href="imagenes/ultrasons%202013/14.JPG"
-          target="_blank"> <img src="imagenes/ultrasons%202013/14.JPG" alt="foto1">
-        </a> <a href="imagenes/ultrasons%202013/15.jpg" target="_blank"> <img
+         > <img src="imagenes/ultrasons%202013/14.JPG" alt="foto1">
+        </a> <a href="imagenes/ultrasons%202013/15.jpg"> <img
             src="imagenes/ultrasons%202013/15.jpg" alt="foto2"> </a> <a href="imagenes/ultrasons%202013/16.JPG"
-          target="_blank"> <img src="imagenes/ultrasons%202013/16.JPG" alt="foto1">
-        </a> <a href="imagenes/ultrasons%202013/17.jpg" target="_blank"> <img
+         > <img src="imagenes/ultrasons%202013/16.JPG" alt="foto1">
+        </a> <a href="imagenes/ultrasons%202013/17.jpg"> <img
             src="imagenes/ultrasons%202013/17.jpg" alt="foto2"> </a> <a href="imagenes/ultrasons%202013/18.jpg"
-          target="_blank"> <img src="imagenes/ultrasons%202013/18.jpg" alt="foto1">
-        </a> <a href="imagenes/ultrasons%202013/19.jpg" target="_blank"> <img
+         > <img src="imagenes/ultrasons%202013/18.jpg" alt="foto1">
+        </a> <a href="imagenes/ultrasons%202013/19.jpg"> <img
             src="imagenes/ultrasons%202013/19.jpg" alt="foto2"> </a> <a href="imagenes/ultrasons%202013/20.JPG"
-          target="_blank"> <img src="imagenes/ultrasons%202013/20.JPG" alt="foto1">
-        </a> <a href="imagenes/ultrasons%202013/21.jpg" target="_blank"> <img
+         > <img src="imagenes/ultrasons%202013/20.JPG" alt="foto1">
+        </a> <a href="imagenes/ultrasons%202013/21.jpg"> <img
             src="imagenes/ultrasons%202013/21.jpg" alt="foto2">&nbsp;</a><a href="imagenes/ultrasons%202013/26.JPG"
-          target="_blank"> </a> <a href="imagenes/ultrasons%202013/22.JPG" target="_blank">
+         > </a> <a href="imagenes/ultrasons%202013/22.JPG">
           <img src="imagenes/ultrasons%202013/22.JPG" alt="foto2">&nbsp; </a><a
-          href="imagenes/ultrasons%202013/23.JPG" target="_blank"> <img src="imagenes/ultrasons%202013/23.JPG"
-            alt="foto2"> </a> <a href="imagenes/ultrasons%202013/24.JPG" target="_blank">
+          href="imagenes/ultrasons%202013/23.JPG"> <img src="imagenes/ultrasons%202013/23.JPG"
+            alt="foto2"> </a> <a href="imagenes/ultrasons%202013/24.JPG">
           <img src="imagenes/ultrasons%202013/24.JPG" alt="foto1">&nbsp;</a><a href="imagenes/ultrasons%202013/23.JPG"
-          target="_blank">&nbsp;</a><a href="imagenes/ultrasons%202013/24.JPG" target="_blank">
-        </a> <a href="imagenes/ultrasons%202013/25.JPG" target="_blank"> <img
+         >&nbsp;</a><a href="imagenes/ultrasons%202013/24.JPG">
+        </a> <a href="imagenes/ultrasons%202013/25.JPG"> <img
             src="imagenes/ultrasons%202013/25.JPG" alt="foto2"> </a> <a href="imagenes/ultrasons%202013/26.JPG"
-          target="_blank"> <img src="imagenes/ultrasons%202013/26.JPG" alt="foto1">
-        </a> <a href="imagenes/ultrasons%202013/27.JPG" target="_blank"><img src="imagenes/ultrasons%202013/27.JPG"
-            alt="foto2"> </a> <a href="imagenes/ultrasons%202013/28.JPG" target="_blank">
+         > <img src="imagenes/ultrasons%202013/26.JPG" alt="foto1">
+        </a> <a href="imagenes/ultrasons%202013/27.JPG"><img src="imagenes/ultrasons%202013/27.JPG"
+            alt="foto2"> </a> <a href="imagenes/ultrasons%202013/28.JPG">
           <img src="imagenes/ultrasons%202013/28.JPG" alt="foto1"> </a> <a href="imagenes/ultrasons%202013/30.JPG"
-          target="_blank"> <img src="imagenes/ultrasons%202013/30.JPG" alt="foto2">
-        </a> <a href="imagenes/ultrasons%202013/31.JPG" target="_blank"> <img
+         > <img src="imagenes/ultrasons%202013/30.JPG" alt="foto2">
+        </a> <a href="imagenes/ultrasons%202013/31.JPG"> <img
             src="imagenes/ultrasons%202013/31.JPG" alt="foto1"> </a> <a href="imagenes/ultrasons%202013/32.JPG"
-          target="_blank"> <img src="imagenes/ultrasons%202013/32.JPG" alt="foto2">&nbsp;</a><a
-          href="imagenes/ultrasons%202013/33.jpg" target="_blank"> </a> <a href="imagenes/ultrasons%202013/29.JPG"
-          target="_blank"> <img src="imagenes/ultrasons%202013/29.JPG" alt="foto2"></a><a
-          href="imagenes/ultrasons%202013/33.jpg" target="_blank"><img src="imagenes/ultrasons%202013/33.jpg"
-            alt="foto1"></a><a href="imagenes/1988-1992/foto2.jpg" target="_blank">
+         > <img src="imagenes/ultrasons%202013/32.JPG" alt="foto2">&nbsp;</a><a
+          href="imagenes/ultrasons%202013/33.jpg"> </a> <a href="imagenes/ultrasons%202013/29.JPG"
+         > <img src="imagenes/ultrasons%202013/29.JPG" alt="foto2"></a><a
+          href="imagenes/ultrasons%202013/33.jpg"><img src="imagenes/ultrasons%202013/33.jpg"
+            alt="foto1"></a><a href="imagenes/1988-1992/foto2.jpg">
         </a> </section>
       <!-- Volver abajo -->
       <p><a href="imagenes.htm" class="volver">← Volver atrás</a></p>
     </main>
-  </body>
+  <script src="js/lightbox.js"></script></body>
 </html>
