--- a/imagenes veneno stereo.html
+++ b/imagenes veneno stereo.html
@@ -39,7 +39,7 @@
         <li><a href="imagenes.htm" class="active">Imágenes</a></li>
         <li><a href="letras.htm">Audios</a></li>
         <li><a href="videos.htm">Vídeos</a></li>
-        <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
+        <li><a href="https://facebook.com/1aKomunion">Facebook</a></li>
       </ul>
     </nav>
     <!-- Galería de imágenes -->
@@ -48,40 +48,40 @@
       <p><a href="imagenes.htm" class="volver">← Volver atrás</a></p>
       <section class="galeria-grupo">
         <h2>Veneno Stereo (2013)</h2>
-        <a href="imagenes/veneno%20stereo%202013/00.jpg" target="_blank"> <img
+        <a href="imagenes/veneno%20stereo%202013/00.jpg"> <img
 
             src="imagenes/veneno%20stereo%202013/00.jpg" alt="foto1"> </a> <a
 
-          href="imagenes/veneno%20stereo%202013/01.jpg" target="_blank"> <img src="imagenes/veneno%20stereo%202013/01.jpg"
+          href="imagenes/veneno%20stereo%202013/01.jpg"> <img src="imagenes/veneno%20stereo%202013/01.jpg"
 
             alt="foto2"> </a> <a href="imagenes/veneno%20stereo%202013/02.JPG"
 
-          target="_blank"> <img src="imagenes/veneno%20stereo%202013/02.JPG" alt="foto1">
-        </a> <a href="imagenes/veneno%20stereo%202013/03.JPG" target="_blank">
+         > <img src="imagenes/veneno%20stereo%202013/02.JPG" alt="foto1">
+        </a> <a href="imagenes/veneno%20stereo%202013/03.JPG">
           <img src="imagenes/veneno%20stereo%202013/03.JPG" alt="foto2"> </a> <a
 
-          href="imagenes/veneno%20stereo%202013/04.JPG" target="_blank"> <img src="imagenes/veneno%20stereo%202013/04.JPG"
+          href="imagenes/veneno%20stereo%202013/04.JPG"> <img src="imagenes/veneno%20stereo%202013/04.JPG"
 
             alt="foto1"> </a> <a href="imagenes/veneno%20stereo%202013/05.JPG"
 
-          target="_blank"> <img src="imagenes/veneno%20stereo%202013/05.JPG" alt="foto2">
-        </a> <a href="imagenes/veneno%20stereo%202013/06.JPG" target="_blank">
+         > <img src="imagenes/veneno%20stereo%202013/05.JPG" alt="foto2">
+        </a> <a href="imagenes/veneno%20stereo%202013/06.JPG">
           <img src="imagenes/veneno%20stereo%202013/06.JPG" alt="foto1"> </a> <a
 
-          href="imagenes/veneno%20stereo%202013/07.JPG" target="_blank"> <img src="imagenes/veneno%20stereo%202013/07.JPG"
+          href="imagenes/veneno%20stereo%202013/07.JPG"> <img src="imagenes/veneno%20stereo%202013/07.JPG"
 
             alt="foto2"> </a> <a href="imagenes/veneno%20stereo%202013/08.JPG"
 
-          target="_blank"> <img src="imagenes/veneno%20stereo%202013/08.JPG"
+         > <img src="imagenes/veneno%20stereo%202013/08.JPG"
 
             alt="foto1"> </a> <a href="imagenes/veneno%20stereo%202013/09.JPG"
 
-          target="_blank"> <img src="imagenes/veneno%20stereo%202013/09.JPG" alt="foto2">&nbsp;</a>
+         > <img src="imagenes/veneno%20stereo%202013/09.JPG" alt="foto2">&nbsp;</a>
 
         </section>
      
         <!-- Volver abajo --> 
       <p><a href="imagenes.htm" class="volver">← Volver atrás</a></p>
     </main>
-  </body>
+  <script src="js/lightbox.js"></script></body>
 </html>
