--- a/imagenes 1988-1992.htm
+++ b/imagenes 1988-1992.htm
@@ -38,7 +38,7 @@
         <li><a href="imagenes.htm" class="active">Imágenes</a></li>
         <li><a href="letras.htm">Audios</a></li>
         <li><a href="videos.htm">Vídeos</a></li>
-        <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
+        <li><a href="https://facebook.com/1aKomunion">Facebook</a></li>
       </ul>
     </nav>
     <!-- Galería de imágenes -->
@@ -48,60 +48,60 @@
       <!-- 1988-1992 -->
       <section class="galeria-grupo">
         <h2>1988 - 1992</h2>
-        <a href="imagenes/1988-1992/00.jpg" target="_blank"> <img src="imagenes/1988-1992/00.jpg"
-            alt="foto1"> </a> <a href="imagenes/1988-1992/01.jpg" target="_blank">
+        <a href="imagenes/1988-1992/00.jpg"> <img src="imagenes/1988-1992/00.jpg"
+            alt="foto1"> </a> <a href="imagenes/1988-1992/01.jpg">
           <img src="imagenes/1988-1992/01.jpg" alt="foto2"> </a> <a href="imagenes/1988-1992/02.jpg"
-          target="_blank"> <img src="imagenes/1988-1992/02.jpg" alt="foto1"> </a>
-        <a href="imagenes/1988-1992/03.jpg" target="_blank"> <img src="imagenes/1988-1992/03.jpg"
-            alt="foto2"> </a><a href="imagenes/1988-1992/04.jpg" target="_blank">
+         > <img src="imagenes/1988-1992/02.jpg" alt="foto1"> </a>
+        <a href="imagenes/1988-1992/03.jpg"> <img src="imagenes/1988-1992/03.jpg"
+            alt="foto2"> </a><a href="imagenes/1988-1992/04.jpg">
           <img src="imagenes/1988-1992/04.jpg" alt="foto1"> </a> <a href="imagenes/1988-1992/06.jpg"
-          target="_blank"> <img src="imagenes/1988-1992/06.jpg" alt="foto2"> </a><a
-          href="imagenes/1988-1992/07.jpg" target="_blank"> <img src="imagenes/1988-1992/07.jpg"
-            alt="foto1"> </a> <a href="imagenes/1988-1992/08.jpg" target="_blank">
+         > <img src="imagenes/1988-1992/06.jpg" alt="foto2"> </a><a
+          href="imagenes/1988-1992/07.jpg"> <img src="imagenes/1988-1992/07.jpg"
+            alt="foto1"> </a> <a href="imagenes/1988-1992/08.jpg">
           <img src="imagenes/1988-1992/08.jpg" alt="foto2"> </a><a href="imagenes/1988-1992/09.jpg"
-          target="_blank"> <img src="imagenes/1988-1992/09.jpg" alt="foto1"> </a>
-        <a href="imagenes/1988-1992/10.jpg" target="_blank"> <img src="imagenes/1988-1992/10.jpg"
-            alt="foto2"> </a><a href="imagenes/1988-1992/11.jpg" target="_blank">
+         > <img src="imagenes/1988-1992/09.jpg" alt="foto1"> </a>
+        <a href="imagenes/1988-1992/10.jpg"> <img src="imagenes/1988-1992/10.jpg"
+            alt="foto2"> </a><a href="imagenes/1988-1992/11.jpg">
           <img src="imagenes/1988-1992/11.jpg" alt="foto1"> </a> <a href="imagenes/1988-1992/12.jpg"
-          target="_blank"> <img src="imagenes/1988-1992/12.jpg" alt="foto2"> </a><a
-          href="imagenes/1988-1992/13.jpg" target="_blank"> <img src="imagenes/1988-1992/13.jpg"
-            alt="foto1"> </a> <a href="imagenes/1988-1992/14.jpg" target="_blank">
+         > <img src="imagenes/1988-1992/12.jpg" alt="foto2"> </a><a
+          href="imagenes/1988-1992/13.jpg"> <img src="imagenes/1988-1992/13.jpg"
+            alt="foto1"> </a> <a href="imagenes/1988-1992/14.jpg">
           <img src="imagenes/1988-1992/14.jpg" alt="foto2"> </a> <a href="imagenes/1988-1992/15.jpg"
-          target="_blank"> <img src="imagenes/1988-1992/15.jpg" alt="foto1"> </a>
-        <a href="imagenes/1988-1992/16.jpg" target="_blank"> <img src="imagenes/1988-1992/16.jpg"
-            alt="foto2"> </a> <a href="imagenes/1988-1992/17.jpg" target="_blank">
+         > <img src="imagenes/1988-1992/15.jpg" alt="foto1"> </a>
+        <a href="imagenes/1988-1992/16.jpg"> <img src="imagenes/1988-1992/16.jpg"
+            alt="foto2"> </a> <a href="imagenes/1988-1992/17.jpg">
           <img src="imagenes/1988-1992/17.jpg" alt="foto1"> </a> <a href="imagenes/1988-1992/18.jpg"
-          target="_blank"> <img src="imagenes/1988-1992/18.jpg" alt="foto2"> </a>
-        <a href="imagenes/1988-1992/19.jpg" target="_blank"> <img src="imagenes/1988-1992/19.jpg"
-            alt="foto1"> </a> <a href="imagenes/1988-1992/20.png" target="_blank">
+         > <img src="imagenes/1988-1992/18.jpg" alt="foto2"> </a>
+        <a href="imagenes/1988-1992/19.jpg"> <img src="imagenes/1988-1992/19.jpg"
+            alt="foto1"> </a> <a href="imagenes/1988-1992/20.png">
           <img src="imagenes/1988-1992/20.png" alt="foto2"> </a> <a href="imagenes/1988-1992/21.jpg"
-          target="_blank"> <img src="imagenes/1988-1992/21.jpg" alt="foto1"> </a>
-        <a href="imagenes/1988-1992/23.jpg" target="_blank"> <img src="imagenes/1988-1992/23.jpg"
-            alt="foto2"> </a> <a href="imagenes/1988-1992/24.jpg" target="_blank">
+         > <img src="imagenes/1988-1992/21.jpg" alt="foto1"> </a>
+        <a href="imagenes/1988-1992/23.jpg"> <img src="imagenes/1988-1992/23.jpg"
+            alt="foto2"> </a> <a href="imagenes/1988-1992/24.jpg">
           <img src="imagenes/1988-1992/24.jpg" alt="foto1"> </a> <a href="imagenes/1988-1992/26.jpg"
-          target="_blank"> <img src="imagenes/1988-1992/26.jpg" alt="foto2"> </a>
-        <a href="imagenes/1988-1992/27.jpg" target="_blank"> <img src="imagenes/1988-1992/27.jpg"
-            alt="foto1"> </a> <a href="imagenes/1988-1992/28.jpg" target="_blank">
+         > <img src="imagenes/1988-1992/26.jpg" alt="foto2"> </a>
+        <a href="imagenes/1988-1992/27.jpg"> <img src="imagenes/1988-1992/27.jpg"
+            alt="foto1"> </a> <a href="imagenes/1988-1992/28.jpg">
           <img src="imagenes/1988-1992/28.jpg" alt="foto2"> </a> <a href="imagenes/1988-1992/29.jpg"
-          target="_blank"> <img src="imagenes/1988-1992/29.jpg" alt="foto1"> </a>
-        <a href="imagenes/1988-1992/30.jpg" target="_blank"> <img src="imagenes/1988-1992/30.jpg"
-            alt="foto2"> </a> <a href="imagenes/1988-1992/31.jpg" target="_blank">
+         > <img src="imagenes/1988-1992/29.jpg" alt="foto1"> </a>
+        <a href="imagenes/1988-1992/30.jpg"> <img src="imagenes/1988-1992/30.jpg"
+            alt="foto2"> </a> <a href="imagenes/1988-1992/31.jpg">
           <img src="imagenes/1988-1992/31.jpg" alt="foto1"> </a> <a href="imagenes/1988-1992/32.jpg"
-          target="_blank"> <img src="imagenes/1988-1992/32.jpg" alt="foto2"> </a>
-        <a href="imagenes/1988-1992/36.jpg" target="_blank"> <img src="imagenes/1988-1992/36.jpg"
-            alt="foto1"> </a> <a href="imagenes/1988-1992/38.jpg" target="_blank">
+         > <img src="imagenes/1988-1992/32.jpg" alt="foto2"> </a>
+        <a href="imagenes/1988-1992/36.jpg"> <img src="imagenes/1988-1992/36.jpg"
+            alt="foto1"> </a> <a href="imagenes/1988-1992/38.jpg">
           <img src="imagenes/1988-1992/38.jpg" alt="foto2"> </a> <a href="imagenes/1988-1992/40.jpg"
-          target="_blank"> <img src="imagenes/1988-1992/40.jpg" alt="foto1"> </a>
-        <a href="imagenes/1988-1992/41.jpg" target="_blank"> <img src="imagenes/1988-1992/41.jpg"
-            alt="foto2"> </a> <a href="imagenes/1988-1992/42.jpg" target="_blank">
+         > <img src="imagenes/1988-1992/40.jpg" alt="foto1"> </a>
+        <a href="imagenes/1988-1992/41.jpg"> <img src="imagenes/1988-1992/41.jpg"
+            alt="foto2"> </a> <a href="imagenes/1988-1992/42.jpg">
           <img src="imagenes/1988-1992/42.jpg" alt="foto1"> </a> <a href="imagenes/1988-1992/43.jpg"
-          target="_blank"> <img src="imagenes/1988-1992/43.jpg" alt="foto2"> </a>
-        <a href="imagenes/1988-1992/44.jpg" target="_blank"> <img src="imagenes/1988-1992/44.jpg"
+         > <img src="imagenes/1988-1992/43.jpg" alt="foto2"> </a>
+        <a href="imagenes/1988-1992/44.jpg"> <img src="imagenes/1988-1992/44.jpg"
             <="" section="">
           <!-- Volver abajo --> </a>
-        <p><a href="imagenes/1988-1992/44.jpg" target="_blank"></a><a href="imagenes.htm"
+        <p><a href="imagenes/1988-1992/44.jpg"></a><a href="imagenes.htm"
             class="volver">← Volver atrás</a></p>
       </section>
     </main>
-  </body>
+  <script src="js/lightbox.js"></script></body>
 </html>
