--- a/imagenes viverock.html
+++ b/imagenes viverock.html
@@ -39,7 +39,7 @@
         <li><a href="imagenes.htm" class="active">Imágenes</a></li>
         <li><a href="letras.htm">Audios</a></li>
         <li><a href="videos.htm">Vídeos</a></li>
-        <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
+        <li><a href="https://facebook.com/1aKomunion">Facebook</a></li>
       </ul>
     </nav>
     <!-- Galería de imágenes -->
@@ -49,117 +49,117 @@
       <section class="galeria-grupo">
         <h2>II Vive Rock (2011)</h2>
         <a href="file:///C:/Users/1akom/Desktop/web%20kom%20-%20copia/imagenes/II%20vive%20rock%202011/00.jpg"
-          target="_blank"> <img src="imagenes/II%20vive%20rock%202011/00.jpg" alt="foto1">
-        </a> <a href="imagenes/II%20vive%20rock%202011/01.jpg" target="_blank">
+         > <img src="imagenes/II%20vive%20rock%202011/00.jpg" alt="foto1">
+        </a> <a href="imagenes/II%20vive%20rock%202011/01.jpg">
           <img src="imagenes/II%20vive%20rock%202011/01.jpg" alt="foto2"> </a>
-        <a href="imagenes/II%20vive%20rock%202011/02.jpg" target="_blank"> <img
+        <a href="imagenes/II%20vive%20rock%202011/02.jpg"> <img
             src="imagenes/II%20vive%20rock%202011/02.jpg" alt="foto1"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/03.jpg" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/03.jpg"> <img
             src="imagenes/II%20vive%20rock%202011/03.jpg" alt="foto2"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/04.JPG" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/04.JPG"> <img
             src="imagenes/II%20vive%20rock%202011/04.JPG" alt="foto1"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/05.jpg" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/05.jpg"> <img
             src="imagenes/II%20vive%20rock%202011/05.jpg" alt="foto2"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/06.JPG" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/06.JPG"> <img
             src="imagenes/II%20vive%20rock%202011/06.JPG" alt="foto1"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/07.jpg" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/07.jpg"> <img
             src="imagenes/II%20vive%20rock%202011/07.jpg" alt="foto2"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/08.jpg" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/08.jpg"> <img
             src="imagenes/II%20vive%20rock%202011/08.jpg" alt="foto1"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/09.jpg" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/09.jpg"> <img
             src="imagenes/II%20vive%20rock%202011/09.jpg" alt="foto2"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/11.jpg" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/11.jpg"> <img
             src="imagenes/II%20vive%20rock%202011/11.jpg" alt="foto1"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/12.jpg" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/12.jpg"> <img
             src="imagenes/II%20vive%20rock%202011/12.jpg" alt="foto2"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/13.jpg" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/13.jpg"> <img
             src="imagenes/II%20vive%20rock%202011/13.jpg" alt="foto1"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/14.JPG" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/14.JPG"> <img
             src="imagenes/II%20vive%20rock%202011/14.JPG" alt="foto2"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/15.jpg" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/15.jpg"> <img
             src="imagenes/II%20vive%20rock%202011/15.jpg" alt="foto1"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/17.jpg" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/17.jpg"> <img
             src="imagenes/II%20vive%20rock%202011/17.jpg" alt="foto2"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/18.jpg" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/18.jpg"> <img
             src="imagenes/II%20vive%20rock%202011/18.jpg" alt="foto1"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/19.jpg" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/19.jpg"> <img
             src="imagenes/II%20vive%20rock%202011/19.jpg" alt="foto2"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/20.jpg" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/20.jpg"> <img
             src="imagenes/II%20vive%20rock%202011/20.jpg" alt="foto1"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/21.JPG" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/21.JPG"> <img
             src="imagenes/II%20vive%20rock%202011/21.JPG" alt="foto2"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/22.JPG" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/22.JPG"> <img
             src="imagenes/II%20vive%20rock%202011/22.JPG" alt="foto1"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/23.JPG" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/23.JPG"> <img
             src="imagenes/II%20vive%20rock%202011/23.JPG" alt="foto2"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/24.JPG" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/24.JPG"> <img
             src="imagenes/II%20vive%20rock%202011/24.JPG" alt="foto1"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/25.JPG" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/25.JPG"> <img
             src="imagenes/II%20vive%20rock%202011/25.JPG" alt="foto2"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/26.JPG" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/26.JPG"> <img
             src="imagenes/II%20vive%20rock%202011/26.JPG" alt="foto1"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/27.JPG" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/27.JPG"> <img
             src="imagenes/II%20vive%20rock%202011/27.JPG" alt="foto2"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/28.JPG" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/28.JPG"> <img
             src="imagenes/II%20vive%20rock%202011/28.JPG" alt="foto1"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/29.JPG" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/29.JPG"> <img
             src="imagenes/II%20vive%20rock%202011/29.JPG" alt="foto2"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/30.JPG" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/30.JPG"> <img
             src="imagenes/II%20vive%20rock%202011/30.JPG" alt="foto1"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/31.JPG" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/31.JPG"> <img
             src="imagenes/II%20vive%20rock%202011/31.JPG" alt="foto2"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/32.jpg" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/32.jpg"> <img
             src="imagenes/II%20vive%20rock%202011/32.jpg" alt="foto1"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/33.JPG" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/33.JPG"> <img
             src="imagenes/II%20vive%20rock%202011/33.JPG" alt="foto2"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/34.jpg" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/34.jpg"> <img
             src="imagenes/II%20vive%20rock%202011/34.jpg" alt="foto1"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/35.JPG" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/35.JPG"> <img
             src="imagenes/II%20vive%20rock%202011/35.JPG" alt="foto2"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/36.jpg" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/36.jpg"> <img
             src="imagenes/II%20vive%20rock%202011/36.jpg" alt="foto1"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/38.jpg" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/38.jpg"> <img
             src="imagenes/II%20vive%20rock%202011/38.jpg" alt="foto2"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/39.jpg" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/39.jpg"> <img
             src="imagenes/II%20vive%20rock%202011/39.jpg" alt="foto1"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/40.jpg" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/40.jpg"> <img
             src="imagenes/II%20vive%20rock%202011/40.jpg" alt="foto2"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/43.JPG" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/43.JPG"> <img
             src="imagenes/II%20vive%20rock%202011/43.JPG" alt="foto1"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/44.JPG" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/44.JPG"> <img
             src="imagenes/II%20vive%20rock%202011/44.JPG" alt="foto2"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/45.JPG" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/45.JPG"> <img
             src="imagenes/II%20vive%20rock%202011/45.JPG" alt="foto1"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/46.JPG" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/46.JPG"> <img
             src="imagenes/II%20vive%20rock%202011/46.JPG" alt="foto2"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/48.jpg" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/48.jpg"> <img
             src="imagenes/II%20vive%20rock%202011/48.jpg" alt="foto1"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/54.jpg" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/54.jpg"> <img
             src="imagenes/II%20vive%20rock%202011/54.jpg" alt="foto2"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/55.jpg" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/55.jpg"> <img
             src="imagenes/II%20vive%20rock%202011/55.jpg" alt="foto1"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/56.jpg" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/56.jpg"> <img
             src="imagenes/II%20vive%20rock%202011/56.jpg" alt="foto2"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/58.jpg" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/58.jpg"> <img
             src="imagenes/II%20vive%20rock%202011/58.jpg" alt="foto1"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/60.jpg" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/60.jpg"> <img
             src="imagenes/II%20vive%20rock%202011/60.jpg" alt="foto2"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/61.jpg" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/61.jpg"> <img
             src="imagenes/II%20vive%20rock%202011/61.jpg" alt="foto1"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/62.jpg" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/62.jpg"> <img
             src="imagenes/II%20vive%20rock%202011/62.jpg" alt="foto2"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/63.JPG" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/63.JPG"> <img
             src="imagenes/II%20vive%20rock%202011/63.JPG" alt="foto1"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/65.JPG" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/65.JPG"> <img
             src="imagenes/II%20vive%20rock%202011/65.JPG" alt="foto2"> </a>
-        <a href="imagenes/II%20vive%20rock%202011/68.JPG" target="_blank"> <img
+        <a href="imagenes/II%20vive%20rock%202011/68.JPG"> <img
             src="imagenes/II%20vive%20rock%202011/68.JPG" alt="foto1"> </a> <a
-          href="imagenes/II%20vive%20rock%202011/69.jpg" target="_blank"> <img
+          href="imagenes/II%20vive%20rock%202011/69.jpg"> <img
             src="imagenes/II%20vive%20rock%202011/69.jpg" alt="foto2"> </a>
-        <a href="imagenes/II%20vive%20rock%202011/70.JPG" target="_blank"> <img
+        <a href="imagenes/II%20vive%20rock%202011/70.JPG"> <img
             src="imagenes/II%20vive%20rock%202011/70.JPG" alt="foto1"> </a> </section>
       <!-- Volver abajo -->
       <p><a href="imagenes.htm" class="volver">← Volver atrás</a></p>
     </main>
-  </body>
+  <script src="js/lightbox.js"></script></body>
 </html>
